# ivtools

./: BUILD.bazel  LICENSE  MODULE.bazel  README.md
docs/: ARCHITECTURE.md  COMDRAW.md  DRAWTOOL.md  GRAPHDRAW.md  IDRAW.md  LIST_OF_CLASSES.md
ivtools/: config.status  configure
ivtools/config/: Makefile  config-linux-gcc.defs  config.mk  site.def.LINUX
ivtools/config/InterViews/: Makefile
ivtools/src/: Imakefile  Makefile
ivtools/src/AttrGlyph/: Makefile  building
ivtools/src/AttrGlyph/LINUX/: Makefile  Makefile.depend
ivtools/src/Attribute/: Makefile  building
ivtools/src/Attribute/LINUX/: Makefile  Makefile.depend
ivtools/src/ComGlyph/: Makefile  building
ivtools/src/ComGlyph/LINUX/: Makefile  Makefile.depend
ivtools/src/ComTerp/: Makefile  building
ivtools/src/ComTerp/LINUX/: Makefile  Makefile.depend
ivtools/src/ComUnidraw/: Makefile  building  grstatfunc.c
ivtools/src/ComUnidraw/LINUX/: Makefile  Makefile.depend
ivtools/src/ComUtil/: Makefile  building
ivtools/src/ComUtil/LINUX/: Makefile  Makefile.depend
ivtools/src/Dispatch/: Makefile  iostreamb.c  rpcregistry.c
ivtools/src/DrawServ/: Makefile  building
ivtools/src/DrawServ/LINUX/: Makefile  Makefile.depend
ivtools/src/FrameUnidraw/: Makefile  building
ivtools/src/FrameUnidraw/LINUX/: Makefile  Makefile.depend
ivtools/src/GraphUnidraw/: Makefile  building
ivtools/src/GraphUnidraw/LINUX/: Makefile  Makefile.depend
ivtools/src/IV/: Makefile  building
ivtools/src/IV-2_6/: Makefile
ivtools/src/IV-X11/: Makefile
ivtools/src/IV-common/: Makefile  building
ivtools/src/IV-common/LINUX/: Makefile  Makefile.depend
ivtools/src/IV/LINUX/: Makefile  Makefile.depend  mkg3states
ivtools/src/IVGlyph/: Makefile  building
ivtools/src/IVGlyph/LINUX/: Makefile  Makefile.depend
ivtools/src/InterViews/: Makefile
ivtools/src/OS/: Makefile
ivtools/src/OverlayUnidraw/: Makefile  building  ovselect.c
ivtools/src/OverlayUnidraw/LINUX/: Makefile  Makefile.depend
ivtools/src/TIFF/: Makefile
ivtools/src/Time/: Makefile  building
ivtools/src/Time/LINUX/: Makefile  Makefile.depend
ivtools/src/TopoFace/: Makefile  building
ivtools/src/TopoFace/LINUX/: Makefile  Makefile.depend
ivtools/src/UniIdraw/: Makefile  building
ivtools/src/UniIdraw/LINUX/: Makefile  Makefile.depend
ivtools/src/Unidraw/: Makefile  building
ivtools/src/Unidraw-common/: Makefile  building
ivtools/src/Unidraw-common/LINUX/: Makefile  Makefile.depend
ivtools/src/Unidraw/LINUX/: Makefile  Makefile.depend
ivtools/src/comdraw/: Makefile  building
ivtools/src/comdraw/LINUX/: Makefile  Makefile.depend
ivtools/src/comterp_/: Makefile  building
ivtools/src/comterp_/LINUX/: Makefile  Makefile.depend
ivtools/src/comtest/: Makefile  building
ivtools/src/comtest/LINUX/: Makefile  Makefile.depend
ivtools/src/dclock/: Makefile  building
ivtools/src/dclock/LINUX/: Makefile  Makefile.depend
ivtools/src/drawserv_/: Makefile  building
ivtools/src/drawserv_/LINUX/: Makefile  Makefile.depend
ivtools/src/drawtool/: Makefile  building
ivtools/src/drawtool/LINUX/: Makefile  Makefile.depend
ivtools/src/flipbook/: Makefile  building
ivtools/src/flipbook/LINUX/: Makefile  Makefile.depend
ivtools/src/glyphs/: Makefile
ivtools/src/glyphs/bdvtable/: Makefile  building
ivtools/src/glyphs/bdvtable/LINUX/: Makefile  Makefile.depend
ivtools/src/glyphs/examples3.1/: Makefile
ivtools/src/glyphs/examples3.1/box1/: Makefile  building
ivtools/src/glyphs/examples3.1/box2/: Makefile  building
ivtools/src/glyphs/examples3.1/box3/: Makefile  building
ivtools/src/glyphs/examples3.1/box4/: Makefile  building
ivtools/src/glyphs/examples3.1/box5/: Makefile  building
ivtools/src/glyphs/examples3.1/button1/: Makefile  building
ivtools/src/glyphs/examples3.1/button2/: Makefile  building
ivtools/src/glyphs/examples3.1/button3/: Makefile  building
ivtools/src/glyphs/examples3.1/bvalue/: Makefile  building
ivtools/src/glyphs/examples3.1/circle/: Makefile  building
ivtools/src/glyphs/examples3.1/drag/: Makefile  building
ivtools/src/glyphs/examples3.1/fonts/: Makefile  building
ivtools/src/glyphs/examples3.1/himom/: Makefile  building
ivtools/src/glyphs/formdemo/: Makefile  building
ivtools/src/glyphs/gclock/: Makefile  building
ivtools/src/glyphs/meter/: Makefile  building
ivtools/src/glyphs/morpher/: Makefile  building
ivtools/src/glyphs/radiogroup/: Makefile  building
ivtools/src/glyphs/scrollable/: Makefile  building
ivtools/src/glyphs/scrollfield/: Makefile  building
ivtools/src/glyphs/strchooser/: Makefile  building
ivtools/src/glyphs/timestamp/: Makefile  building  main.c
ivtools/src/glyphterp/: Makefile  building
ivtools/src/glyphterp/LINUX/: Makefile  Makefile.depend
ivtools/src/graphdraw/: Makefile  building
ivtools/src/graphdraw/LINUX/: Makefile  Makefile.depend
ivtools/src/html/: Makefile
ivtools/src/html/templates/: Makefile
ivtools/src/iclass/: Makefile  building
ivtools/src/iclass/LINUX/: Makefile  Makefile.depend
ivtools/src/idemo/: Makefile  building
ivtools/src/idemo/LINUX/: Makefile  Makefile.depend
ivtools/src/idraw/: Makefile  building
ivtools/src/idraw/LINUX/: Makefile  Makefile.depend
ivtools/src/include/: Makefile
ivtools/src/include/Dispatch/: Makefile
ivtools/src/include/IV-2_6/: Makefile  _names.h
ivtools/src/include/IV-3_1/: Makefile
ivtools/src/include/IV-X11/: Makefile
ivtools/src/include/IV-look/: Makefile
ivtools/src/include/InterViews/: Makefile
ivtools/src/include/OS/: Makefile
ivtools/src/include/TIFF/: Makefile
ivtools/src/include/Unidraw/: Makefile
ivtools/src/include/ivstd/: Makefile  fstream.h  iostream.h
ivtools/src/ivtext/: Makefile  building
ivtools/src/ivtext/LINUX/: Makefile  Makefile.depend
ivtools/src/man/: Makefile
ivtools/src/man/man1/: Makefile
ivtools/src/man/man3/: Makefile
ivtools/src/scripts/: Makefile  cpu.sh
ivtools/src/tests/y2k/: building
ivtools/src/utils/: Makefile  building  ivtmpnam.c
ivtools/src/utils/LINUX/: Makefile  Makefile.depend
(+81 files in other folders)
