load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

package(default_visibility = ["//visibility:public"])

# --- Native Bazel build ---


# Common compiler options
COMMON_COPTS = [
    "-xc++",
    "-gdwarf-2",
    "-O2",
    "-fPIC",
    "-Dcplusplus_2_1",
    "-Wno-deprecated",
    "-DLEAKCHECK",
    "-DLIBSTDCPLUSPLUS3=1",
    "-DArchitectureName=LINUX",
    "-DEXTERN_TIFF",  # Use system libtiff
    "-Dmotif_kit",
    "-Dsgi_motif_kit",
    "-Dopenlook_kit",
    "-Dbw_kit",
    "-Ddefault_kit=SMFKit",
    "-DABSLIBALLDIR='\"/usr/local/lib/ivtools/\"'",
    "-DRELLIBALLDIR='\"/usr/local/lib/ivtools/\"'",
    "-DX_LIBDIR='\"/usr/lib/x86_64-linux-gnu\"'",
    "-Dps_metrics_dir='\"/usr/local/lib/ivtools/psfont/\"'",
    "-DSOCKLEN_T_DEFINED=1",
    "-fpermissive", # To handle ancient C++ idioms
    "-Iivtools/src",
    "-Iivtools/src/include",
    "-Iivtools/src/include/ivstd",
    "-Iivtools/src/IV/LINUX",
]

# Backward compatibility defines and includes
BACKWARD_COPTS = ["-Div2_6_compatible"]
BACKWARD_INCLUDES = ["ivtools/src/include/IV-2_6"]
# For the target itself to find headers in the right order
BACKWARD_LOCAL_INCLUDES = ["-Iivtools/src/include/IV-2_6"]

INCOMPATIBLE_COPTS = ["-Div2_6_incompatible"]

# Common includes (relative to root)
COMMON_INCLUDES = [
    "ivtools/src",
    "ivtools/src/include",
    "ivtools/src/include/ivstd",
    "ivtools/src/IV/LINUX",
]

# System libraries
X11_LIBS = ["-lX11", "-lXext"]
MATH_LIBS = ["-lm"]
RT_LIBS = ["-lrt"]
TIFF_LIBS = ["-ltiff"]

# Header filegroups to simplify dependencies
filegroup(
    name = "all_headers",
    srcs = glob([
        "ivtools/src/**/*.h",
        "ivtools/src/**/*.ci",
        "ivtools/src/**/*.arg",
        "ivtools/src/**/*.err",
        "ivtools/src/**/*.bm",
        "ivtools/src/include/**/*",
    ]),
)

# Libraries

cc_library(
    name = "Dispatch_lib",
    srcs = [
        "ivtools/src/Dispatch/dispatcher.c",
        "ivtools/src/Dispatch/iohandler.c",
        "ivtools/src/Dispatch/iostreamb.c",
        "ivtools/src/Dispatch/rpchdr.c",
        "ivtools/src/Dispatch/rpcpeer.c",
        "ivtools/src/Dispatch/rpcreader.c",
        "ivtools/src/Dispatch/rpcregistry.c",
        "ivtools/src/Dispatch/rpcservice.c",
        "ivtools/src/Dispatch/rpcwriter.c",
    ],
    hdrs = [":all_headers"],
    copts = COMMON_COPTS,
    includes = COMMON_INCLUDES,
)

cc_library(
    name = "IV-common_lib",
    srcs = [
        "ivtools/src/IV-common/listimpl.c",
        "ivtools/src/IV-common/math.c",
        "ivtools/src/IV-common/memory.c",
        "ivtools/src/IV-common/observe.c",
        "ivtools/src/IV-common/regexp.c",
        "ivtools/src/IV-common/resource.c",
        "ivtools/src/IV-common/string.c",
        "ivtools/src/IV-common/textbuffer.c",
        "ivtools/src/IV-common/tform2_6.c",
        "ivtools/src/IV-common/transformer.c",
    ],
    hdrs = [":all_headers"],
    copts = COMMON_COPTS,
    includes = COMMON_INCLUDES,
)

cc_library(
    name = "Unidraw-base_lib",
    srcs = [
        "ivtools/src/Unidraw-common/compview.c",
        "ivtools/src/Unidraw-common/component.c",
        "ivtools/src/Unidraw-common/geomobjs.c",
        "ivtools/src/Unidraw-common/globals.c",
        "ivtools/src/Unidraw-common/iterator.c",
        "ivtools/src/Unidraw-common/ulist.c",
    ],
    hdrs = [":all_headers"],
    copts = COMMON_COPTS,
    includes = COMMON_INCLUDES,
    deps = [":IV-common_lib"],
)

cc_library(
    name = "ComUtil_lib",
    srcs = [
        "ivtools/src/ComUtil/atox.c",
        "ivtools/src/ComUtil/comerr.c",
        "ivtools/src/ComUtil/dmm.c",
        "ivtools/src/ComUtil/errfile.c",
        "ivtools/src/ComUtil/errsys.c",
        "ivtools/src/ComUtil/funcptrs.c",
        "ivtools/src/ComUtil/_lexscan.c",
        "ivtools/src/ComUtil/mblock.c",
        "ivtools/src/ComUtil/optable.c",
        "ivtools/src/ComUtil/_parser.c",
        "ivtools/src/ComUtil/popen2.c",
        "ivtools/src/ComUtil/_scanner.c",
        "ivtools/src/ComUtil/symbols.c",
        "ivtools/src/ComUtil/txtutil.c",
        "ivtools/src/ComUtil/types.c",
        "ivtools/src/ComUtil/util.c",
        "ivtools/src/ComUtil/xdll.c",
    ],
    hdrs = [":all_headers"],
    copts = COMMON_COPTS,
    includes = COMMON_INCLUDES,
)

cc_library(
    name = "Attribute_lib",
    srcs = [
        "ivtools/src/Attribute/alist.c",
        "ivtools/src/Attribute/aliterator.c",
        "ivtools/src/Attribute/attribute.c",
        "ivtools/src/Attribute/attrlist.c",
        "ivtools/src/Attribute/attrvalue.c",
        "ivtools/src/Attribute/commodule.c",
        "ivtools/src/Attribute/lexscan.c",
        "ivtools/src/Attribute/paramlist.c",
    ],
    hdrs = [":all_headers"],
    copts = COMMON_COPTS,
    includes = COMMON_INCLUDES,
    deps = [
        ":ComUtil_lib",
        ":IV-common_lib",
        ":Unidraw-base_lib",
    ],
)

cc_library(
    name = "TopoFace_lib",
    srcs = [
        "ivtools/src/TopoFace/fgeomobjs.c",
        "ivtools/src/TopoFace/topoedge.c",
        "ivtools/src/TopoFace/topoedgelist.c",
        "ivtools/src/TopoFace/topoelt.c",
        "ivtools/src/TopoFace/topoface.c",
        "ivtools/src/TopoFace/toponode.c",
    ],
    hdrs = [":all_headers"],
    copts = COMMON_COPTS,
    includes = COMMON_INCLUDES,
    deps = [
        ":IV-common_lib",
        ":Unidraw-base_lib",
    ],
)

cc_library(
    name = "Time_lib",
    srcs = [
        "ivtools/src/Time/Date.c",
        "ivtools/src/Time/Time.c",
        "ivtools/src/Time/obstime.c",
    ],
    hdrs = [":all_headers"],
    copts = COMMON_COPTS,
    includes = COMMON_INCLUDES,
    deps = [":IV-common_lib"],
)

cc_library(
    name = "ComTerp_lib",
    srcs = [
        "ivtools/src/ComTerp/assignfunc.c",
        "ivtools/src/ComTerp/bitfunc.c",
        "ivtools/src/ComTerp/boolfunc.c",
        "ivtools/src/ComTerp/bquotefunc.c",
        "ivtools/src/ComTerp/charfunc.c",
        "ivtools/src/ComTerp/comfunc.c",
        "ivtools/src/ComTerp/comterpserv.c",
        "ivtools/src/ComTerp/comvalue.c",
        "ivtools/src/ComTerp/condfunc.c",
        "ivtools/src/ComTerp/ctrlfunc.c",
        "ivtools/src/ComTerp/debugfunc.c",
        "ivtools/src/ComTerp/dotfunc.c",
        "ivtools/src/ComTerp/helpfunc.c",
        "ivtools/src/ComTerp/iofunc.c",
        "ivtools/src/ComTerp/listfunc.c",
        "ivtools/src/ComTerp/mathfunc.c",
        "ivtools/src/ComTerp/numfunc.c",
        "ivtools/src/ComTerp/parsefunc.c",
        "ivtools/src/ComTerp/parser.c",
        "ivtools/src/ComTerp/postfunc.c",
        "ivtools/src/ComTerp/randfunc.c",
        "ivtools/src/ComTerp/scanner.c",
        "ivtools/src/ComTerp/statfunc.c",
        "ivtools/src/ComTerp/strmfunc.c",
        "ivtools/src/ComTerp/symbolfunc.c",
        "ivtools/src/ComTerp/timefunc.c",
        "ivtools/src/ComTerp/typefunc.c",
        "ivtools/src/ComTerp/xformfunc.c",
        "ivtools/src/ComTerp/comterp.c",
    ],
    hdrs = [":all_headers"],
    copts = COMMON_COPTS + INCOMPATIBLE_COPTS,
    includes = COMMON_INCLUDES,
    deps = [
        ":Attribute_lib",
        ":ComUtil_lib",
        ":IV-common_lib",
        ":Time_lib",
        ":TopoFace_lib",
        ":Unidraw-base_lib",
    ],
)

cc_library(
    name = "iv_lib",
    srcs = [
        "ivtools/src/InterViews/action.c",
        "ivtools/src/InterViews/adjust.c",
        "ivtools/src/InterViews/aggr.c",
        "ivtools/src/InterViews/align.c",
        "ivtools/src/InterViews/alloctbl.c",
        "ivtools/src/InterViews/arrcomp.c",
        "ivtools/src/InterViews/background.c",
        "ivtools/src/InterViews/bevel.c",
        "ivtools/src/InterViews/border.c",
        "ivtools/src/InterViews/box.c",
        "ivtools/src/InterViews/browser.c",
        "ivtools/src/InterViews/button.c",
        "ivtools/src/InterViews/character.c",
        "ivtools/src/InterViews/composition.c",
        "ivtools/src/InterViews/compositor.c",
        "ivtools/src/InterViews/debug.c",
        "ivtools/src/InterViews/deck.c",
        "ivtools/src/InterViews/dialogs.c",
        "ivtools/src/InterViews/fbrowser.c",
        "ivtools/src/InterViews/fchooser.c",
        "ivtools/src/InterViews/field.c",
        "ivtools/src/InterViews/geometry.c",
        "ivtools/src/InterViews/glyph.c",
        "ivtools/src/InterViews/group.c",
        "ivtools/src/InterViews/handler.c",
        "ivtools/src/InterViews/hit.c",
        "ivtools/src/InterViews/image.c",
        "ivtools/src/InterViews/input.c",
        "ivtools/src/InterViews/kit.c",
        "ivtools/src/InterViews/label.c",
        "ivtools/src/InterViews/layout.c",
        "ivtools/src/InterViews/lrmarker.c",
        "ivtools/src/InterViews/menu.c",
        "ivtools/src/InterViews/mf_dialogs.c",
        "ivtools/src/InterViews/mf_kit.c",
        "ivtools/src/InterViews/mono_kit.c",
        "ivtools/src/InterViews/monoglyph.c",
        "ivtools/src/InterViews/observe.c",
        "ivtools/src/InterViews/ol_dialogs.c",
        "ivtools/src/InterViews/ol_kit.c",
        "ivtools/src/InterViews/page.c",
        "ivtools/src/InterViews/patch.c",
        "ivtools/src/InterViews/place.c",
        "ivtools/src/InterViews/polyglyph.c",
        "ivtools/src/InterViews/printer.c",
        "ivtools/src/InterViews/psfont.c",
        "ivtools/src/InterViews/regexp.c",
        "ivtools/src/InterViews/resource.c",
        "ivtools/src/InterViews/rule.c",
        "ivtools/src/InterViews/scrbox.c",
        "ivtools/src/InterViews/session.c",
        "ivtools/src/InterViews/shadow.c",
        "ivtools/src/InterViews/simpcomp.c",
        "ivtools/src/InterViews/slider.c",
        "ivtools/src/InterViews/smf_kit.c",
        "ivtools/src/InterViews/stencil.c",
        "ivtools/src/InterViews/stepper.c",
        "ivtools/src/InterViews/style.c",
        "ivtools/src/InterViews/superpose.c",
        "ivtools/src/InterViews/transformer.c",
        "ivtools/src/InterViews/target.c",
        "ivtools/src/InterViews/telltale.c",
        "ivtools/src/InterViews/texcomp.c",
        "ivtools/src/InterViews/tile.c",
        "ivtools/src/InterViews/tiff.c",
        "ivtools/src/InterViews/tformsetter.c",
        "ivtools/src/InterViews/xymarker.c",
        # IV-2_6
        "ivtools/src/IV-2_6/box2_6.c",
        "ivtools/src/IV-2_6/deck2_6.c",
        "ivtools/src/IV-2_6/glue2_6.c",
        "ivtools/src/IV-2_6/interactor.c",
        "ivtools/src/IV-2_6/message.c",
        "ivtools/src/IV-2_6/painter.c",
        "ivtools/src/IV-2_6/perspective.c",
        "ivtools/src/IV-2_6/rubband.c",
        "ivtools/src/IV-2_6/rubcurve.c",
        "ivtools/src/IV-2_6/rubgroup.c",
        "ivtools/src/IV-2_6/rubline.c",
        "ivtools/src/IV-2_6/rubrect.c",
        "ivtools/src/IV-2_6/rubverts.c",
        "ivtools/src/IV-2_6/scene.c",
        "ivtools/src/IV-2_6/sensor.c",
        "ivtools/src/IV-2_6/shape.c",
        "ivtools/src/IV-2_6/subject.c",
        "ivtools/src/IV-2_6/textbuffer.c",
        "ivtools/src/IV-2_6/textdisplay.c",
        "ivtools/src/IV-2_6/tform2_6.c",
        "ivtools/src/IV-2_6/tray.c",
        "ivtools/src/IV-2_6/viewport.c",
        "ivtools/src/IV-2_6/xbitmap2_6.c",
        "ivtools/src/IV-2_6/xevent2_6.c",
        "ivtools/src/IV-2_6/xinter.c",
        "ivtools/src/IV-2_6/xpainter.c",
        "ivtools/src/IV-2_6/xpattern.c",
        "ivtools/src/IV-2_6/adjuster2_6.c",
        "ivtools/src/IV-2_6/banner.c",
        "ivtools/src/IV-2_6/border2_6.c",
        "ivtools/src/IV-2_6/button2_6.c",
        "ivtools/src/IV-2_6/compeditor.c",
        "ivtools/src/IV-2_6/control.c",
        "ivtools/src/IV-2_6/dialog2_6.c",
        "ivtools/src/IV-2_6/filebrowser.c",
        "ivtools/src/IV-2_6/filechooser.c",
        "ivtools/src/IV-2_6/frame.c",
        "ivtools/src/IV-2_6/matcheditor.c",
        "ivtools/src/IV-2_6/menu2_6.c",
        "ivtools/src/IV-2_6/panner2_6.c",
        "ivtools/src/IV-2_6/scrollbar2_6.c",
        "ivtools/src/IV-2_6/scroller2_6.c",
        "ivtools/src/IV-2_6/strbrowser.c",
        "ivtools/src/IV-2_6/strchooser.c",
        "ivtools/src/IV-2_6/streditor.c",
        "ivtools/src/IV-2_6/texteditor.c",
        "ivtools/src/IV-2_6/world.c",
        # IV-X11
        "ivtools/src/IV-X11/xbitmap.c",
        "ivtools/src/IV-X11/xbrush.c",
        "ivtools/src/IV-X11/xcanvas.c",
        "ivtools/src/IV-X11/xcolor.c",
        "ivtools/src/IV-X11/xcursor.c",
        "ivtools/src/IV-X11/xdrag.c",
        "ivtools/src/IV-X11/xevent.c",
        "ivtools/src/IV-X11/xfont.c",
        "ivtools/src/IV-X11/xraster.c",
        "ivtools/src/IV-X11/xreqerr.c",
        "ivtools/src/IV-X11/xselection.c",
        "ivtools/src/IV-X11/xwindow.c",
        # OS - Deduplicated
        "ivtools/src/OS/directory.c",
        "ivtools/src/OS/file.c",
        "ivtools/src/OS/host.c",
        "ivtools/src/OS/memory.c",
        "ivtools/src/OS/string.c",
        "ivtools/src/OS/ustring.c",
    ],
    hdrs = [":all_headers"],
    copts = COMMON_COPTS,
    includes = COMMON_INCLUDES,
    deps = [
        ":Dispatch_lib",
        ":IV-common_lib",
    ],
    linkopts = X11_LIBS + MATH_LIBS + RT_LIBS + TIFF_LIBS,
)

cc_library(
    name = "Unidraw_lib",
    srcs = [
        "ivtools/src/Unidraw/align.c",
        "ivtools/src/Unidraw/brushcmd.c",
        "ivtools/src/Unidraw/catalog.c",
        "ivtools/src/Unidraw/catcmds.c",
        "ivtools/src/Unidraw/cglue.c",
        "ivtools/src/Unidraw/clipboard.c",
        "ivtools/src/Unidraw/colorcmd.c",
        "ivtools/src/Unidraw/command.c",
        "ivtools/src/Unidraw/component.c",
        "ivtools/src/Unidraw/compview.c",
        "ivtools/src/Unidraw/connect.c",
        "ivtools/src/Unidraw/connector.c",
        "ivtools/src/Unidraw/creator.c",
        "ivtools/src/Unidraw/csolver.c",
        "ivtools/src/Unidraw/ctrlinfo.c",
        "ivtools/src/Unidraw/damage.c",
        "ivtools/src/Unidraw/data.c",
        "ivtools/src/Unidraw/datas.c",
        "ivtools/src/Unidraw/dialogs.c",
        "ivtools/src/Unidraw/edit.c",
        "ivtools/src/Unidraw/editor.c",
        "ivtools/src/Unidraw/editorinfo.c",
        "ivtools/src/Unidraw/ellipse.c",
        "ivtools/src/Unidraw/ellipses.c",
        "ivtools/src/Unidraw/externview.c",
        "ivtools/src/Unidraw/font.c",
        "ivtools/src/Unidraw/geomobjs.c",
        "ivtools/src/Unidraw/globals.c",
        "ivtools/src/Unidraw/graphic.c",
        "ivtools/src/Unidraw/grblock.c",
        "ivtools/src/Unidraw/grcomp.c",
        "ivtools/src/Unidraw/grcomptool.c",
        "ivtools/src/Unidraw/grid.c",
        "ivtools/src/Unidraw/grview.c",
        "ivtools/src/Unidraw/gvupdater.c",
        "ivtools/src/Unidraw/import.c",
        "ivtools/src/Unidraw/keymap.c",
        "ivtools/src/Unidraw/kybd.c",
        "ivtools/src/Unidraw/line.c",
        "ivtools/src/Unidraw/lines.c",
        "ivtools/src/Unidraw/link.c",
        "ivtools/src/Unidraw/macro.c",
        "ivtools/src/Unidraw/magnify.c",
        "ivtools/src/Unidraw/manip.c",
        "ivtools/src/Unidraw/manips.c",
        "ivtools/src/Unidraw/move.c",
        "ivtools/src/Unidraw/nop.c",
        "ivtools/src/Unidraw/pad.c",
        "ivtools/src/Unidraw/patcmd.c",
        "ivtools/src/Unidraw/path.c",
        "ivtools/src/Unidraw/picture.c",
        "ivtools/src/Unidraw/pin.c",
        "ivtools/src/Unidraw/polygon.c",
        "ivtools/src/Unidraw/polygons.c",
        "ivtools/src/Unidraw/pspaint.c",
        "ivtools/src/Unidraw/psview.c",
        "ivtools/src/Unidraw/rastercomp.c",
        "ivtools/src/Unidraw/rasterrect.c",
        "ivtools/src/Unidraw/rect.c",
        "ivtools/src/Unidraw/reshape.c",
        "ivtools/src/Unidraw/rotate.c",
        "ivtools/src/Unidraw/scale.c",
        "ivtools/src/Unidraw/select.c",
        "ivtools/src/Unidraw/selection.c",
        "ivtools/src/Unidraw/slot.c",
        "ivtools/src/Unidraw/spline.c",
        "ivtools/src/Unidraw/splines.c",
        "ivtools/src/Unidraw/statevar.c",
        "ivtools/src/Unidraw/statevars.c",
        "ivtools/src/Unidraw/stateview.c",
        "ivtools/src/Unidraw/stateviews.c",
        "ivtools/src/Unidraw/stencilcomp.c",
        "ivtools/src/Unidraw/stretch.c",
        "ivtools/src/Unidraw/struct.c",
        "ivtools/src/Unidraw/text.c",
        "ivtools/src/Unidraw/tool.c",
        "ivtools/src/Unidraw/transfn.c",
        "ivtools/src/Unidraw/transfns.c",
        "ivtools/src/Unidraw/transforms.c",
        "ivtools/src/Unidraw/uarray.c",
        "ivtools/src/Unidraw/uctrl.c",
        "ivtools/src/Unidraw/uctrls.c",
        "ivtools/src/Unidraw/uhash.c",
        "ivtools/src/Unidraw/ulabel.c",
        "ivtools/src/Unidraw/umap.c",
        "ivtools/src/Unidraw/unidraw.c",
        "ivtools/src/Unidraw/upage.c",
        "ivtools/src/Unidraw/ustencil.c",
        "ivtools/src/Unidraw/vertices.c",
        "ivtools/src/Unidraw/verts.c",
        "ivtools/src/Unidraw/viewcmds.c",
        "ivtools/src/Unidraw/viewer.c",
    ],
    hdrs = [":all_headers"],
    copts = COMMON_COPTS,
    includes = COMMON_INCLUDES,
    deps = [
        ":iv_lib",
        ":Unidraw-base_lib",
    ],
)

cc_library(
    name = "UniIdraw_lib",
    srcs = [
        "ivtools/src/UniIdraw/idarrow.c",
        "ivtools/src/UniIdraw/idarrowhead.c",
        "ivtools/src/UniIdraw/idarrows.c",
        "ivtools/src/UniIdraw/idcatalog.c",
        "ivtools/src/UniIdraw/idcmds.c",
        "ivtools/src/UniIdraw/idcomp.c",
        "ivtools/src/UniIdraw/idcreator.c",
        "ivtools/src/UniIdraw/iddialogs.c",
        "ivtools/src/UniIdraw/ided.c",
        "ivtools/src/UniIdraw/idkybd.c",
        "ivtools/src/UniIdraw/idvars.c",
    ],
    hdrs = [":all_headers"],
    copts = BACKWARD_LOCAL_INCLUDES + COMMON_COPTS + BACKWARD_COPTS,
    includes = BACKWARD_INCLUDES + COMMON_INCLUDES,
    deps = [":Unidraw_lib"],
)

cc_library(
    name = "IVGlyph_lib",
    srcs = [
        "ivtools/src/IVGlyph/bdfltform.c",
        "ivtools/src/IVGlyph/bdtable.c",
        "ivtools/src/IVGlyph/bdvalue.c",
        "ivtools/src/IVGlyph/boolform.c",
        "ivtools/src/IVGlyph/charfield.c",
        "ivtools/src/IVGlyph/dragedit.c",
        "ivtools/src/IVGlyph/enumform.c",
        "ivtools/src/IVGlyph/exportchooser.c",
        "ivtools/src/IVGlyph/fieldedit.c",
        "ivtools/src/IVGlyph/figure.c",
        "ivtools/src/IVGlyph/gdialogs.c",
        "ivtools/src/IVGlyph/globals.c",
        "ivtools/src/IVGlyph/idraw.c",
        "ivtools/src/IVGlyph/importchooser.c",
        "ivtools/src/IVGlyph/namestate.c",
        "ivtools/src/IVGlyph/observables.c",
        "ivtools/src/IVGlyph/odialogs.c",
        "ivtools/src/IVGlyph/ofilechooser.c",
        "ivtools/src/IVGlyph/printchooser.c",
        "ivtools/src/IVGlyph/saveaschooser.c",
        "ivtools/src/IVGlyph/scrollable.c",
        "ivtools/src/IVGlyph/stredit.c",
        "ivtools/src/IVGlyph/strchooser.c",
        "ivtools/src/IVGlyph/strlist.c",
        "ivtools/src/IVGlyph/texteditor.c",
        "ivtools/src/IVGlyph/textform.c",
        "ivtools/src/IVGlyph/textbuff.c",
        "ivtools/src/IVGlyph/textedit.c",
        "ivtools/src/IVGlyph/textview.c",
        "ivtools/src/IVGlyph/textwindow.c",
        "ivtools/src/IVGlyph/timeglyph.c",
        "ivtools/src/IVGlyph/toolbutton.c",
        "ivtools/src/IVGlyph/valuator.c",
    ],
    hdrs = [":all_headers"],
    copts = COMMON_COPTS,
    includes = COMMON_INCLUDES,
    deps = [
        ":Time_lib",
        ":iv_lib",
    ],
)

cc_library(
    name = "AttrGlyph_lib",
    srcs = [
        "ivtools/src/AttrGlyph/attredit.c",
    ],
    hdrs = [":all_headers"],
    copts = COMMON_COPTS + [
        "-DLibStdCPlusPlus2=0",
        "-DLibStdCPlusPlus3=1",
    ],
    includes = COMMON_INCLUDES,
    deps = [
        ":Attribute_lib",
        ":IVGlyph_lib",
        ":iv_lib",
    ],
)

cc_library(
    name = "ComGlyph_lib",
    srcs = [
        "ivtools/src/ComGlyph/attrdialog.c",
        "ivtools/src/ComGlyph/comtextedit.c",
        "ivtools/src/ComGlyph/comtextview.c",
        "ivtools/src/ComGlyph/terpdialog.c",
    ],
    hdrs = [":all_headers"],
    copts = COMMON_COPTS + INCOMPATIBLE_COPTS,
    includes = COMMON_INCLUDES,
    deps = [
        ":AttrGlyph_lib",
        ":Attribute_lib",
        ":ComTerp_lib",
        ":ComUtil_lib",
        ":IVGlyph_lib",
        ":iv_lib",
    ],
)

cc_library(
    name = "OverlayUnidraw_lib",
    srcs = [
        "ivtools/src/OverlayUnidraw/annotate.c",
        "ivtools/src/OverlayUnidraw/attrtool.c",
        "ivtools/src/OverlayUnidraw/clipline.c",
        "ivtools/src/OverlayUnidraw/grayraster.c",
        "ivtools/src/OverlayUnidraw/indexmixins.c",
        "ivtools/src/OverlayUnidraw/leafwalker.c",
        "ivtools/src/OverlayUnidraw/ovadjuster.c",
        "ivtools/src/OverlayUnidraw/ovarrow.c",
        "ivtools/src/OverlayUnidraw/ovcatalog.c",
        "ivtools/src/OverlayUnidraw/ovcomps.c",
        "ivtools/src/OverlayUnidraw/ovcreator.c",
        "ivtools/src/OverlayUnidraw/ovdamage.c",
        "ivtools/src/OverlayUnidraw/ovdialog.c",
        "ivtools/src/OverlayUnidraw/ovdoer.c",
        "ivtools/src/OverlayUnidraw/oved.c",
        "ivtools/src/OverlayUnidraw/ovellipse.c",
        "ivtools/src/OverlayUnidraw/ovfile.c",
        "ivtools/src/OverlayUnidraw/ovhull.c",
        "ivtools/src/OverlayUnidraw/ovline.c",
        "ivtools/src/OverlayUnidraw/ovmanips.c",
        "ivtools/src/OverlayUnidraw/ovpage.c",
        "ivtools/src/OverlayUnidraw/ovpainter.c",
        "ivtools/src/OverlayUnidraw/ovpanner.c",
        "ivtools/src/OverlayUnidraw/ovpolygon.c",
        "ivtools/src/OverlayUnidraw/ovprecise.c",
        "ivtools/src/OverlayUnidraw/ovpspict.c",
        "ivtools/src/OverlayUnidraw/ovpsview.c",
        "ivtools/src/OverlayUnidraw/ovraster.c",
        "ivtools/src/OverlayUnidraw/ovrect.c",
        "ivtools/src/OverlayUnidraw/ovrestimage.c",
        "ivtools/src/OverlayUnidraw/ovselect.c",
        "ivtools/src/OverlayUnidraw/ovselection.c",
        "ivtools/src/OverlayUnidraw/ovspline.c",
        "ivtools/src/OverlayUnidraw/ovstates.c",
        "ivtools/src/OverlayUnidraw/ovstencil.c",
        "ivtools/src/OverlayUnidraw/ovtext.c",
        "ivtools/src/OverlayUnidraw/ovunidraw.c",
        "ivtools/src/OverlayUnidraw/ovvars.c",
        "ivtools/src/OverlayUnidraw/ovvertices.c",
        "ivtools/src/OverlayUnidraw/ovviewer.c",
        "ivtools/src/OverlayUnidraw/ovviews.c",
        "ivtools/src/OverlayUnidraw/ptinpoly.c",
        "ivtools/src/OverlayUnidraw/rastercmds.c",
        "ivtools/src/OverlayUnidraw/scriptview.c",
        "ivtools/src/OverlayUnidraw/textfile.c",
    ],
    hdrs = [":all_headers"],
    copts = BACKWARD_LOCAL_INCLUDES + COMMON_COPTS + BACKWARD_COPTS + ["-Iivtools/src/OverlayUnidraw"],
    includes = BACKWARD_INCLUDES + COMMON_INCLUDES,
    deps = [
        ":AttrGlyph_lib",
        ":Attribute_lib",
        ":ComGlyph_lib",
        ":ComTerp_lib",
        ":ComUtil_lib",
        ":IVGlyph_lib",
        ":Time_lib",
        ":TopoFace_lib",
        ":UniIdraw_lib",
        ":Unidraw_lib",
        ":iv_lib",
    ],
)

cc_library(
    name = "OverlayUnidraw_incompatible_lib",
    srcs = [
        "ivtools/src/OverlayUnidraw/grloctool.c",
        "ivtools/src/OverlayUnidraw/ovabout.c",
        "ivtools/src/OverlayUnidraw/ovcamcmds.c",
        "ivtools/src/OverlayUnidraw/ovchainview.c",
        "ivtools/src/OverlayUnidraw/ovcmds.c",
        "ivtools/src/OverlayUnidraw/ovctrl.c",
        "ivtools/src/OverlayUnidraw/ovexport.c",
        "ivtools/src/OverlayUnidraw/ovfixview.c",
        "ivtools/src/OverlayUnidraw/ovgdialog.c",
        "ivtools/src/OverlayUnidraw/ovimport.c",
        "ivtools/src/OverlayUnidraw/ovipcmds.c",
        "ivtools/src/OverlayUnidraw/ovkit.c",
        "ivtools/src/OverlayUnidraw/ovprint.c",
        "ivtools/src/OverlayUnidraw/ovshowhide.c",
        "ivtools/src/OverlayUnidraw/setattrbyexpr.c",
        "ivtools/src/OverlayUnidraw/slctbyattr.c",
    ],
    hdrs = [":all_headers"],
    copts = COMMON_COPTS + BACKWARD_COPTS + INCOMPATIBLE_COPTS + ["-Iivtools/src/OverlayUnidraw"],
    includes = COMMON_INCLUDES,
    deps = [
        ":AttrGlyph_lib",
        ":Attribute_lib",
        ":ComGlyph_lib",
        ":ComTerp_lib",
        ":ComUtil_lib",
        ":IVGlyph_lib",
        ":Time_lib",
        ":TopoFace_lib",
        ":UniIdraw_lib",
        ":Unidraw_lib",
        ":iv_lib",
    ],
)

cc_library(
    name = "ComUnidraw_lib",
    srcs = [
        "ivtools/src/ComUnidraw/grdotfunc.c",
        "ivtools/src/ComUnidraw/grfunc.c",
        "ivtools/src/ComUnidraw/grlistfunc.c",
        "ivtools/src/ComUnidraw/groupfunc.c",
        "ivtools/src/ComUnidraw/grstatfunc.c",
        "ivtools/src/ComUnidraw/grstrmfunc.c",
        "ivtools/src/ComUnidraw/highlightfunc.c",
        "ivtools/src/ComUnidraw/comeditor.c",
        "ivtools/src/ComUnidraw/comterp-iohandler.c",
        "ivtools/src/ComUnidraw/dialogfunc.c",
        "ivtools/src/ComUnidraw/nfunc.c",
        "ivtools/src/ComUnidraw/pixelcmds.c",
        "ivtools/src/ComUnidraw/pixelfunc.c",
        "ivtools/src/ComUnidraw/plotfunc.c",
        "ivtools/src/ComUnidraw/unifunc.c",
    ],
    hdrs = [":all_headers"],
    copts = BACKWARD_LOCAL_INCLUDES + COMMON_COPTS + BACKWARD_COPTS,
    includes = BACKWARD_INCLUDES + COMMON_INCLUDES,
    deps = [
        ":AttrGlyph_lib",
        ":Attribute_lib",
        ":ComGlyph_lib",
        ":ComTerp_lib",
        ":ComUtil_lib",
        ":IVGlyph_lib",
        ":OverlayUnidraw_lib",
        ":OverlayUnidraw_incompatible_lib",
        ":UniIdraw_lib",
        ":Unidraw_lib",
        ":iv_lib",
    ],
)

cc_library(
    name = "ComUnidraw_incompatible_lib",
    srcs = [
        "ivtools/src/ComUnidraw/comkit.c",
    ],
    hdrs = [":all_headers"],
    copts = COMMON_COPTS + BACKWARD_COPTS + INCOMPATIBLE_COPTS,
    includes = COMMON_INCLUDES,
    deps = [
        ":AttrGlyph_lib",
        ":Attribute_lib",
        ":ComGlyph_lib",
        ":ComTerp_lib",
        ":ComUtil_lib",
        ":IVGlyph_lib",
        ":OverlayUnidraw_lib",
        ":OverlayUnidraw_incompatible_lib",
        ":UniIdraw_lib",
        ":Unidraw_lib",
        ":iv_lib",
    ],
)

cc_library(
    name = "GraphUnidraw_lib",
    srcs = [
        "ivtools/src/GraphUnidraw/edgecomp.c",
        "ivtools/src/GraphUnidraw/graphcatalog.c",
        "ivtools/src/GraphUnidraw/graphcmds.c",
        "ivtools/src/GraphUnidraw/graphcomp.c",
        "ivtools/src/GraphUnidraw/graphdata.c",
        "ivtools/src/GraphUnidraw/graphcreator.c",
        "ivtools/src/GraphUnidraw/grapheditor.c",
        "ivtools/src/GraphUnidraw/graphexport.c",
        "ivtools/src/GraphUnidraw/graphtools.c",
        "ivtools/src/GraphUnidraw/nodecomp.c",
    ],
    hdrs = [":all_headers"],
    copts = BACKWARD_LOCAL_INCLUDES + COMMON_COPTS + BACKWARD_COPTS,
    includes = BACKWARD_INCLUDES + COMMON_INCLUDES,
    deps = [
        ":ComGlyph_lib",
        ":ComUnidraw_lib",
        ":ComUnidraw_incompatible_lib",
        ":OverlayUnidraw_lib",
        ":OverlayUnidraw_incompatible_lib",
        ":UniIdraw_lib",
        ":Unidraw_lib",
        ":iv_lib",
    ],
)

cc_library(
    name = "GraphUnidraw_incompatible_lib",
    srcs = [
        "ivtools/src/GraphUnidraw/graphdialog.c",
        "ivtools/src/GraphUnidraw/graphimport.c",
        "ivtools/src/GraphUnidraw/graphkit.c",
    ],
    hdrs = [":all_headers"],
    copts = COMMON_COPTS + BACKWARD_COPTS + INCOMPATIBLE_COPTS,
    includes = COMMON_INCLUDES,
    deps = [
        ":ComGlyph_lib",
        ":ComUnidraw_lib",
        ":ComUnidraw_incompatible_lib",
        ":OverlayUnidraw_lib",
        ":OverlayUnidraw_incompatible_lib",
        ":UniIdraw_lib",
        ":Unidraw_lib",
        ":iv_lib",
    ],
)

cc_library(
    name = "FrameUnidraw_lib",
    srcs = [
        "ivtools/src/FrameUnidraw/framecmds.c",
        "ivtools/src/FrameUnidraw/framecomps.c",
        "ivtools/src/FrameUnidraw/framecatalog.c",
        "ivtools/src/FrameUnidraw/framecreator.c",
        "ivtools/src/FrameUnidraw/frameeditor.c",
        "ivtools/src/FrameUnidraw/framefile.c",
        "ivtools/src/FrameUnidraw/framefunc.c",
        "ivtools/src/FrameUnidraw/frameps.c",
        "ivtools/src/FrameUnidraw/framescripts.c",
        "ivtools/src/FrameUnidraw/frameviewer.c",
        "ivtools/src/FrameUnidraw/frameviews.c",
    ],
    hdrs = [":all_headers"],
    copts = BACKWARD_LOCAL_INCLUDES + COMMON_COPTS + BACKWARD_COPTS,
    includes = BACKWARD_INCLUDES + COMMON_INCLUDES,
    deps = [
        ":ComGlyph_lib",
        ":ComUnidraw_lib",
        ":ComUnidraw_incompatible_lib",
        ":OverlayUnidraw_lib",
        ":OverlayUnidraw_incompatible_lib",
        ":UniIdraw_lib",
        ":Unidraw_lib",
        ":iv_lib",
    ],
)

cc_library(
    name = "FrameUnidraw_incompatible_lib",
    srcs = [
        "ivtools/src/FrameUnidraw/frameimport.c",
        "ivtools/src/FrameUnidraw/framekit.c",
        "ivtools/src/FrameUnidraw/framestates.c",
    ],
    hdrs = [":all_headers"],
    copts = COMMON_COPTS + BACKWARD_COPTS + INCOMPATIBLE_COPTS,
    includes = COMMON_INCLUDES,
    deps = [
        ":ComGlyph_lib",
        ":ComUnidraw_lib",
        ":ComUnidraw_incompatible_lib",
        ":OverlayUnidraw_lib",
        ":OverlayUnidraw_incompatible_lib",
        ":UniIdraw_lib",
        ":Unidraw_lib",
        ":iv_lib",
    ],
)

# Binaries

cc_binary(
    name = "idraw",
    srcs = ["ivtools/src/idraw/main.c"],
    copts = BACKWARD_LOCAL_INCLUDES + COMMON_COPTS + BACKWARD_COPTS,
    includes = BACKWARD_INCLUDES + COMMON_INCLUDES,
    deps = [
        ":UniIdraw_lib",
        ":Unidraw_lib",
        ":iv_lib",
    ],
)

cc_binary(
    name = "comdraw",
    srcs = ["ivtools/src/comdraw/main.c"],
    copts = BACKWARD_LOCAL_INCLUDES + COMMON_COPTS + BACKWARD_COPTS + [
        "-D__ACE_INLINE__",
    ],
    includes = BACKWARD_INCLUDES + COMMON_INCLUDES,
    deps = [
        ":ComGlyph_lib",
        ":ComTerp_lib",
        ":ComUnidraw_lib",
        ":ComUnidraw_incompatible_lib",
        ":FrameUnidraw_lib",
        ":FrameUnidraw_incompatible_lib",
        ":OverlayUnidraw_lib",
        ":OverlayUnidraw_incompatible_lib",
        ":UniIdraw_lib",
        ":Unidraw_lib",
        ":iv_lib",
    ],
)

cc_binary(
    name = "graphdraw",
    srcs = ["ivtools/src/graphdraw/main.c"],
    copts = BACKWARD_LOCAL_INCLUDES + COMMON_COPTS + BACKWARD_COPTS,
    includes = BACKWARD_INCLUDES + COMMON_INCLUDES,
    deps = [
        ":ComGlyph_lib",
        ":ComTerp_lib",
        ":ComUnidraw_lib",
        ":ComUnidraw_incompatible_lib",
        ":GraphUnidraw_lib",
        ":GraphUnidraw_incompatible_lib",
        ":OverlayUnidraw_lib",
        ":OverlayUnidraw_incompatible_lib",
        ":UniIdraw_lib",
        ":Unidraw_lib",
        ":iv_lib",
    ],
)

cc_binary(
    name = "drawtool",
    srcs = ["ivtools/src/drawtool/main.c"],
    copts = BACKWARD_LOCAL_INCLUDES + COMMON_COPTS + BACKWARD_COPTS,
    includes = BACKWARD_INCLUDES + COMMON_INCLUDES,
    deps = [
        ":ComGlyph_lib",
        ":OverlayUnidraw_lib",
        ":OverlayUnidraw_incompatible_lib",
        ":UniIdraw_lib",
        ":Unidraw_lib",
        ":iv_lib",
    ],
)

cc_binary(
    name = "comterp",
    srcs = ["ivtools/src/comterp_/main.c"],
    copts = COMMON_COPTS + ["-D__ACE_INLINE__"],
    includes = COMMON_INCLUDES,
    deps = [
        ":ComTerp_lib",
        ":ComUtil_lib",
        ":IV-common_lib",
        ":Time_lib",
        ":TopoFace_lib",
        ":Unidraw-base_lib",
        ":iv_lib",
    ],
)

cc_binary(
    name = "iclass",
    srcs = [
        "ivtools/src/iclass/classbuffer.c",
        "ivtools/src/iclass/classeditor.c",
        "ivtools/src/iclass/classinfo.c",
        "ivtools/src/iclass/dialogs.c",
        "ivtools/src/iclass/direct.c",
        "ivtools/src/iclass/globals.c",
        "ivtools/src/iclass/iclass.c",
        "ivtools/src/iclass/main.c",
    ],
    copts = BACKWARD_LOCAL_INCLUDES + COMMON_COPTS + BACKWARD_COPTS,
    includes = BACKWARD_INCLUDES + COMMON_INCLUDES,
    deps = [
        ":iv_lib",
    ],
)
